--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0041.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0041.html
@@ -36,26 +36,22 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 718 287 811 316">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ense</ins>
-            <del title="nlp 0.90">ense</del>
+            <ins title="nlp 2.00">esse</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 844 273 1029 328">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">finxeriH,</ins>
-            <del title="nlp 0.90">finxeriH,</del>
+            <ins title="nlp 2.00">finxeris,</ins>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1060 277 1223 316">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cetcrae</ins>
-            <del title="nlp 0.90">cetcrae</del>
+            <ins title="nlp 2.00">ceterae</ins>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1256 275 1399 328">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">parteu</ins>
-            <del title="nlp 0.90">parteu</del>
+            <ins title="nlp 2.00">partes</ins>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1432 270 1558 327">
@@ -107,9 +103,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_16" class="ocr_word" title="bbox 946 344 1123 388">
+        <span id="w_16_0" class="ocr_word" title="bbox 946 344 1123 388">
           <span class="alternatives">
-            <ins title="nlp 2.00">—65</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_16_1" class="ocr_word" title="bbox 946 344 1123 388">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">58—65</ins>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1155 342 1227 401">
@@ -126,14 +127,7 @@
         </span>
         <span id="w_19" class="ocr_word" title="bbox 1545 340 1804 397">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rcHpondeut</ins>
-            <del title="nlp 0.90">rcHpondeut</del>
-          </span>
-        </span>
-        <span id="w_20" class="ocr_word" title="bbox 1834 339 1993 383">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">LaSrtii</ins>
-            <del title="nlp 0.90">LaSrtii</del>
+            <ins title="nlp 2.00">respondent</ins>
           </span>
         </span>
       </span>
@@ -143,36 +137,44 @@
             <ins title="nlp 2.00">§§</ins>
           </span>
         </span>
-        <span id="w_22" class="ocr_word" title="bbox 329 415 385 459">
+        <span id="w_22_0" class="ocr_word" title="bbox 329 415 385 459">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">89</ins>
+            <ins class="alt" title="nlp 2.00">89</ins>
           </span>
         </span>
-        <span id="w_23" class="ocr_word" title="bbox 405 415 579 459">
+        <span id="w_22_1" class="ocr_word" title="bbox 329 415 385 459">
           <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
+            <ins class="alt" title="nlp 2.00">med.</ins>
           </span>
         </span>
-        <span id="w_24" class="ocr_word" title="bbox 587 414 657 472">
+        <span id="w_25_0" class="ocr_word" title="bbox 698 415 874 473">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">93,</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_25" class="ocr_word" title="bbox 698 415 874 473">
+        <span id="w_25_1" class="ocr_word" title="bbox 698 415 874 473">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Didymi</ins>
-            <del title="nlp 0.90">Didymi</del>
+            <ins class="alt" title="nlp 2.00">—93,</ins>
           </span>
         </span>
-        <span id="w_26" class="ocr_word" title="bbox 916 431 955 474">
+        <span id="w_26_0" class="ocr_word" title="bbox 916 431 955 474">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">p.</ins>
-            <del title="nlp 0.90">p.</del>
+            <ins class="alt" title="nlp 2.00">med.—93,</ins>
           </span>
         </span>
-        <span id="w_27" class="ocr_word" title="bbox 982 415 1158 460">
+        <span id="w_26_1" class="ocr_word" title="bbox 916 431 955 474">
           <span class="alternatives">
-            <ins title="nlp 2.00">—74</ins>
+            <ins class="alt" title="nlp 2.00">Didymi</ins>
+          </span>
+        </span>
+        <span id="w_27_0" class="ocr_word" title="bbox 982 415 1158 460">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">p.</ins>
+          </span>
+        </span>
+        <span id="w_27_1" class="ocr_word" title="bbox 982 415 1158 460">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">68—74</ins>
           </span>
         </span>
         <span id="w_28" class="ocr_word" title="bbox 1201 413 1273 472">
@@ -181,25 +183,9 @@
             <del title="nlp 0.90">(de</del>
           </span>
         </span>
-        <span id="w_29" class="ocr_word" title="bbox 1305 413 1450 471">
+        <span id="w_29_0" class="ocr_word" title="bbox 1305 413 1450 471">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">bonis)</ins>
-            <del title="nlp 0.90">bonis</del>
-          </span>
-        </span>
-        <span id="w_30" class="ocr_word" title="bbox 1494 412 1653 457">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Laërtii</ins>
-          </span>
-        </span>
-        <span id="w_31" class="ocr_word" title="bbox 1696 413 1749 466">
-          <span class="alternatives">
-            <ins title="nlp 2.00">§§</ins>
-          </span>
-        </span>
-        <span id="w_32" class="ocr_word" title="bbox 1774 411 1993 455">
-          <span class="alternatives">
-            <ins title="nlp 2.00">94—101.</ins>
+            <ins class="alt" title="nlp 2.00">bonis)</ins>
           </span>
         </span>
       </span>
@@ -268,17 +254,7 @@
         </span>
         <span id="w_43" class="ocr_word" title="bbox 317 557 372 600">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">79</ins>
-          </span>
-        </span>
-        <span id="w_44" class="ocr_word" title="bbox 376 582 429 588">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_45" class="ocr_word" title="bbox 435 558 491 601">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">85</ins>
+            <ins class="alt" title="nlp 2.00">79—85</ins>
           </span>
         </span>
         <span id="w_46" class="ocr_word" title="bbox 525 557 699 615">
@@ -337,9 +313,14 @@
             <del title="nlp 0.90">respondent</del>
           </span>
         </span>
-        <span id="w_55" class="ocr_word" title="bbox 765 629 926 673">
+        <span id="w_55_0" class="ocr_word" title="bbox 765 629 926 673">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërtii</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_55_1" class="ocr_word" title="bbox 765 629 926 673">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Laërtii</ins>
           </span>
         </span>
         <span id="w_56" class="ocr_word" title="bbox 963 633 989 685">
@@ -347,9 +328,14 @@
             <ins title="nlp 2.00">§</ins>
           </span>
         </span>
-        <span id="w_57" class="ocr_word" title="bbox 1019 629 1262 674">
+        <span id="w_57_0" class="ocr_word" title="bbox 1019 629 1262 674">
           <span class="alternatives">
-            <ins title="nlp 2.00">102—107.</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_57_1" class="ocr_word" title="bbox 1019 629 1262 674">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">102—107.</ins>
           </span>
         </span>
         <span id="w_58" class="ocr_word" title="bbox 1331 628 1466 672">
@@ -362,18 +348,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">apud</ins>
             <del title="nlp 0.90">apud</del>
-          </span>
-        </span>
-        <span id="w_60" class="ocr_word" title="bbox 1668 629 1900 680">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">utrumque</ins>
-            <del title="nlp 0.90">utrumque</del>
-          </span>
-        </span>
-        <span id="w_61" class="ocr_word" title="bbox 1943 623 1995 667">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">de</ins>
-            <del title="nlp 0.90">de</del>
           </span>
         </span>
       </span>
@@ -402,15 +376,19 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_66" class="ocr_word" title="bbox 823 701 1023 757">
+        <span id="w_66_0" class="ocr_word" title="bbox 823 701 1023 757">
           <span class="alternatives">
-            <ins title="nlp 2.00">85—86,</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_66_1" class="ocr_word" title="bbox 823 701 1023 757">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">85—86,</ins>
           </span>
         </span>
         <span id="w_67" class="ocr_word" title="bbox 1063 701 1201 745">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">LaSrt.</ins>
-            <del title="nlp 0.90">LaSrt.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_68" class="ocr_word" title="bbox 1229 703 1255 755">
@@ -418,31 +396,20 @@
             <ins title="nlp 2.00">§</ins>
           </span>
         </span>
-        <span id="w_69" class="ocr_word" title="bbox 1285 700 1363 743">
+        <span id="w_69_0" class="ocr_word" title="bbox 1285 700 1363 743">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">107</ins>
+            <ins class="alt" title="nlp 2.00">107</ins>
           </span>
         </span>
-        <span id="w_70" class="ocr_word" title="bbox 1386 702 1558 742">
+        <span id="w_69_1" class="ocr_word" title="bbox 1285 700 1363 743">
           <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_71" class="ocr_word" title="bbox 1571 697 1656 741">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">110</ins>
+            <ins class="alt" title="nlp 2.00">extr.—110</ins>
           </span>
         </span>
         <span id="w_72" class="ocr_word" title="bbox 1675 697 1730 740">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">in.</ins>
             <del title="nlp 0.90">in.</del>
-          </span>
-        </span>
-        <span id="w_73" class="ocr_word" title="bbox 1794 694 1996 751">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Sequitur</ins>
-            <del title="nlp 0.90">Sequitur</del>
           </span>
         </span>
       </span>
@@ -495,8 +462,7 @@
         </span>
         <span id="w_82" class="ocr_word" title="bbox 1509 769 1726 812">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertium</ins>
-            <del title="nlp 0.90">Laertium</del>
+            <ins title="nlp 2.00">Laërtium</ins>
           </span>
         </span>
         <span id="w_83" class="ocr_word" title="bbox 1759 767 1914 810">
@@ -555,15 +521,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_92" class="ocr_word" title="bbox 1657 840 1712 883" lang="grc">
+        <span id="w_92_0" class="ocr_word" title="bbox 1657 840 1712 883">
           <span class="alternatives">
-            <ins title="nlp 2.00">88—93,</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_93" class="ocr_word" title="bbox 1889 852 1997 893">
+        <span id="w_92_1" class="ocr_word" title="bbox 1657 840 1712 883">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quae</ins>
-            <del title="nlp 0.90">quae</del>
+            <ins class="alt" title="nlp 2.00">88—93,</ins>
           </span>
         </span>
       </span>
@@ -576,8 +541,7 @@
         </span>
         <span id="w_95" class="ocr_word" title="bbox 392 912 612 957">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertium</ins>
-            <del title="nlp 0.90">Laertium</del>
+            <ins title="nlp 2.00">Laërtium</ins>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 645 917 698 969">
@@ -592,18 +556,8 @@
         </span>
         <span id="w_98" class="ocr_word" title="bbox 831 916 937 959">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">med.</ins>
+            <ins class="alt" title="nlp 2.00">med.—114</ins>
             <del title="nlp 0.90">med.</del>
-          </span>
-        </span>
-        <span id="w_99" class="ocr_word" title="bbox 943 941 996 947">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_100" class="ocr_word" title="bbox 1003 916 1088 959">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">114</ins>
           </span>
         </span>
         <span id="w_101" class="ocr_word" title="bbox 1119 918 1341 958">
@@ -640,8 +594,7 @@
         </span>
         <span id="w_106" class="ocr_word" title="bbox 511 985 759 1029">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">morborura</ins>
-            <del title="nlp 0.90">morborura</del>
+            <ins title="nlp 2.00">morborum</ins>
           </span>
         </span>
         <span id="w_107" class="ocr_word" title="bbox 791 990 920 1043">
@@ -696,8 +649,7 @@
         </span>
         <span id="w_115" class="ocr_word" title="bbox 705 1062 902 1115">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">eicepto,</ins>
-            <del title="nlp 0.90">eicepto,</del>
+            <ins title="nlp 2.00">excepto,</ins>
           </span>
         </span>
         <span id="w_116" class="ocr_word" title="bbox 941 1059 1056 1115">
@@ -714,8 +666,7 @@
         </span>
         <span id="w_118" class="ocr_word" title="bbox 1143 1059 1314 1101">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertio</ins>
-            <del title="nlp 0.90">Laertio</del>
+            <ins title="nlp 2.00">Laërtio</ins>
           </span>
         </span>
         <span id="w_119" class="ocr_word" title="bbox 1346 1056 1501 1099">
@@ -726,8 +677,7 @@
         </span>
         <span id="w_120" class="ocr_word" title="bbox 1533 1055 1786 1109">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coUocatur,</ins>
-            <del title="nlp 0.90">coUocatur,</del>
+            <ins title="nlp 2.00">collocatur,</ins>
           </span>
         </span>
         <span id="w_121" class="ocr_word" title="bbox 1818 1052 1997 1095">
@@ -930,8 +880,7 @@
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1389 1269 1604 1326">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quoraodo</ins>
-            <del title="nlp 0.90">quoraodo</del>
+            <ins title="nlp 2.00">quomodo</ins>
           </span>
         </span>
         <span id="w_154" class="ocr_word" title="bbox 1625 1267 1725 1311">
@@ -1197,8 +1146,7 @@
         </span>
         <span id="w_197" class="ocr_word" title="bbox 1225 1626 1386 1670">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertii</ins>
-            <del title="nlp 0.90">Laertii</del>
+            <ins title="nlp 2.00">Laërtii</ins>
           </span>
         </span>
         <span id="w_198" class="ocr_word" title="bbox 1419 1625 1623 1683">
@@ -1508,8 +1456,7 @@
         </span>
         <span id="w_249" class="ocr_word" title="bbox 1912 1976 2003 2020">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">laui</ins>
-            <del title="nlp 0.90">laui</del>
+            <ins title="nlp 2.00">Iam</ins>
           </span>
         </span>
       </span>
@@ -1883,8 +1830,7 @@
         </span>
         <span id="w_315" class="ocr_word" title="bbox 1519 2481 1564 2523">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iu</ins>
-            <del title="nlp 0.90">iu</del>
+            <ins title="nlp 2.00">in</ins>
           </span>
         </span>
         <span id="w_316" class="ocr_word" title="bbox 1595 2481 1715 2523">
@@ -1962,8 +1908,7 @@
       <span class="ocr_line" title="bbox 261 2619 2009 2683">
         <span id="w_328" class="ocr_word" title="bbox 261 2625 422 2668">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertii</ins>
-            <del title="nlp 0.90">Laertii</del>
+            <ins title="nlp 2.00">Laërtii</ins>
           </span>
         </span>
         <span id="w_329" class="ocr_word" title="bbox 456 2625 820 2683">
@@ -2095,8 +2040,7 @@
         </span>
         <span id="w_351" class="ocr_word" title="bbox 461 2768 714 2812">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertianae</ins>
-            <del title="nlp 0.90">Laertianae</del>
+            <ins title="nlp 2.00">Laërtianae</ins>
           </span>
         </span>
         <span id="w_352" class="ocr_word" title="bbox 755 2772 798 2812">
