--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0042.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0042.html
@@ -332,8 +332,7 @@
         </span>
         <span id="w_55" class="ocr_word" title="bbox 1491 651 1833 707">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coUectionibus,</ins>
-            <del title="nlp 0.90">coUectionibus,</del>
+            <ins title="nlp 2.00">collectionibus,</ins>
           </span>
         </span>
         <span id="w_56" class="ocr_word" title="bbox 1876 649 2084 692">
@@ -386,19 +385,18 @@
             <del title="nlp 0.90">permixfi</del>
           </span>
         </span>
-        <span id="w_64" class="ocr_word" title="bbox 1727 720 1997 763">
+        <span id="w_64_0" class="ocr_word" title="bbox 1727 720 1997 763">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">inveniantur</ins>
-            <del title="nlp 0.90">inveniantur</del>
+            <ins class="alt" title="nlp 2.00">inveniantur</ins>
+          </span>
+        </span>
+        <span id="w_64_1" class="ocr_word" title="bbox 1727 720 1997 763">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">diversorum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 356 796 986 839">
-        <span id="w_66" class="ocr_word" title="bbox 356 811 575 839">
-          <span class="alternatives">
-            <ins title="nlp 2.00">diversorum</ins>
-          </span>
-        </span>
         <span id="w_67" class="ocr_word" title="bbox 608 798 830 837">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">auctorum</ins>
@@ -595,8 +593,7 @@
       <span class="ocr_line" title="bbox 354 1075 2091 1134">
         <span id="w_98" class="ocr_word" title="bbox 354 1080 473 1122">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nuUo</ins>
-            <del title="nlp 0.90">nuUo</del>
+            <ins title="nlp 2.00">nullo</ins>
           </span>
         </span>
         <span id="w_99" class="ocr_word" title="bbox 511 1080 598 1122">
@@ -657,8 +654,7 @@
         </span>
         <span id="w_108" class="ocr_word" title="bbox 585 1150 861 1193">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coUocantur.</ins>
-            <del title="nlp 0.90">coUocantur.</del>
+            <ins title="nlp 2.00">collocantur.</ins>
           </span>
         </span>
         <span id="w_109" class="ocr_word" title="bbox 922 1150 990 1192">
@@ -859,8 +855,7 @@
         </span>
         <span id="w_143" class="ocr_word" title="bbox 1885 1358 2093 1401">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nonnuUa</ins>
-            <del title="nlp 0.90">nonnuUa</del>
+            <ins title="nlp 2.00">nonnulla</ins>
           </span>
         </span>
       </span>
@@ -1631,8 +1626,7 @@
         </span>
         <span id="w_274" class="ocr_word" title="bbox 968 2357 1131 2399">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nuUam</ins>
-            <del title="nlp 0.90">nuUam</del>
+            <ins title="nlp 2.00">nullam</ins>
           </span>
         </span>
         <span id="w_275" class="ocr_word" title="bbox 1171 2357 1258 2399">
