--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0054.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0054.html
@@ -96,9 +96,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 367 356 2102 415">
-        <span id="w_17" class="ocr_word" title="bbox 492 376 562 415" lang="grc">
+        <span id="w_17_0" class="ocr_word" title="bbox 492 376 562 415">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τί</ins>
+            <ins class="alt" title="nlp 2.00">„τί</ins>
+          </span>
+        </span>
+        <span id="w_17_1" class="ocr_word" title="bbox 492 376 562 415">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_18" class="ocr_word" title="bbox 589 375 780 414" lang="grc">
@@ -136,11 +141,6 @@
             <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
-        <span id="w_25" class="ocr_word" title="bbox 2019 374 2102 400" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὖν</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 368 428 2102 486">
         <span id="w_26" class="ocr_word" title="bbox 368 446 488 481" lang="grc">
@@ -163,9 +163,14 @@
             <ins class="alt" title="nlp 1.00">Κράτητος·</ins>
           </span>
         </span>
-        <span id="w_30" class="ocr_word" title="bbox 1068 429 1159 484" lang="grc">
+        <span id="w_30_0" class="ocr_word" title="bbox 1068 429 1159 484">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅτε</ins>
+            <ins class="alt" title="nlp 2.00">[ὅτε</ins>
+          </span>
+        </span>
+        <span id="w_30_1" class="ocr_word" title="bbox 1068 429 1159 484">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_31" class="ocr_word" title="bbox 1190 428 1263 472" lang="grc">
@@ -186,11 +191,6 @@
         <span id="w_34" class="ocr_word" title="bbox 1670 444 1807 471" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτοῦ</ins>
-          </span>
-        </span>
-        <span id="w_35" class="ocr_word" title="bbox 1839 436 2102 484" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γράψαντος,</ins>
           </span>
         </span>
       </span>
@@ -361,7 +361,7 @@
       <span class="ocr_line" title="bbox 368 711 2106 769">
         <span id="w_68" class="ocr_word" title="bbox 544 714 618 757" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἕνα</ins>
+            <ins title="nlp 2.00">ἵνα</ins>
           </span>
         </span>
         <span id="w_69" class="ocr_word" title="bbox 648 714 723 756" lang="grc">
@@ -386,7 +386,7 @@
         </span>
         <span id="w_73" class="ocr_word" title="bbox 1278 729 1391 767" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νῦν</ins>
+            <ins title="nlp 2.00">„νῦν</ins>
           </span>
         </span>
         <span id="w_74" class="ocr_word" title="bbox 1422 713 1654 767" lang="grc">
@@ -399,9 +399,9 @@
             <ins class="alt" title="nlp 1.00">ὅτε</ins>
           </span>
         </span>
-        <span id="w_76" class="ocr_word" title="bbox 1788 711 2106 766" lang="grc">
+        <span id="w_76_0" class="ocr_word" title="bbox 1788 711 2106 766">
           <span class="alternatives">
-            <ins title="nlp 2.00">νεμαθἀγξλα.“</ins>
+            <ins class="alt" title="nlp 2.00">νεναυάγηκα.“</ins>
           </span>
         </span>
       </span>
@@ -708,11 +708,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 371 1207 2110 1267">
-        <span id="w_135" class="ocr_word" title="bbox 371 1228 493 1267" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γους,</ins>
-          </span>
-        </span>
         <span id="w_136" class="ocr_word" title="bbox 524 1213 793 1267" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">βουλόμενος</ins>
@@ -896,7 +891,7 @@
         </span>
         <span id="w_172" class="ocr_word" title="bbox 1298 1423 1533 1481" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρότερον</ins>
+            <ins title="nlp 2.00">(πρότερον</ins>
           </span>
         </span>
         <span id="w_173" class="ocr_word" title="bbox 1561 1426 1801 1478" lang="grc">
@@ -946,9 +941,14 @@
             <ins title="nlp 2.00">— — —)</ins>
           </span>
         </span>
-        <span id="w_186" class="ocr_word" title="bbox 1757 1491 1829 1535" lang="grc">
+        <span id="w_186_0" class="ocr_word" title="bbox 1757 1491 1829 1535">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00">οἳ</ins>
+          </span>
+        </span>
+        <span id="w_186_1" class="ocr_word" title="bbox 1757 1491 1829 1535">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_187" class="ocr_word" title="bbox 1860 1493 1938 1535" lang="grc">
@@ -1219,9 +1219,14 @@
             <ins class="alt" title="nlp 1.00">ἀπεδέχετο</ins>
           </span>
         </span>
-        <span id="w_240" class="ocr_word" title="bbox 1241 1922 1289 1965">
+        <span id="w_240_0" class="ocr_word" title="bbox 1241 1922 1289 1965">
           <span class="alternatives">
-            <ins title="nlp 2.00">δ'</ins>
+            <ins class="alt" title="nlp 2.00">δ᾿</ins>
+          </span>
+        </span>
+        <span id="w_240_1" class="ocr_word" title="bbox 1241 1922 1289 1965">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_241" class="ocr_word" title="bbox 1308 1923 1444 1965" lang="grc">
@@ -1242,11 +1247,6 @@
         <span id="w_244" class="ocr_word" title="bbox 1863 1919 1935 1962" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_245" class="ocr_word" title="bbox 1970 1924 2114 1962" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἴποτε</ins>
           </span>
         </span>
       </span>
@@ -1817,7 +1817,7 @@
         </span>
         <span id="w_355" class="ocr_word" title="bbox 1088 2781 1327 2833" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Ζήνωνος</ins>
+            <ins title="nlp 2.00">„Ζήνωνος</ins>
           </span>
         </span>
         <span id="w_356" class="ocr_word" title="bbox 1357 2792 1437 2819" lang="grc">
@@ -2049,8 +2049,7 @@
         </span>
         <span id="w_397" class="ocr_word" title="bbox 1873 3085 1975 3121">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">PDP.</ins>
-            <del title="nlp 0.90">PDP.</del>
+            <ins title="nlp 2.00">PDF.</ins>
           </span>
         </span>
       </span>
