--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0043.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0043.html
@@ -61,8 +61,7 @@
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1360 280 1492 323">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fiiisse</ins>
-            <del title="nlp 0.90">fiiisse</del>
+            <ins title="nlp 2.00">fuisse</ins>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1524 280 1720 323">
@@ -87,8 +86,7 @@
       <span class="ocr_line" title="bbox 290 349 2043 409">
         <span id="w_12" class="ocr_word" title="bbox 290 352 590 409">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">compendiura</ins>
-            <del title="nlp 0.90">compendiura</del>
+            <ins title="nlp 2.00">compendium</ins>
           </span>
         </span>
         <span id="w_13" class="ocr_word" title="bbox 624 367 701 395">
@@ -202,8 +200,7 @@
         </span>
         <span id="w_31" class="ocr_word" title="bbox 1732 419 2042 464">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sententianun</ins>
-            <del title="nlp 0.90">sententianun</del>
+            <ins title="nlp 2.00">sententiarum</ins>
           </span>
         </span>
       </span>
@@ -736,8 +733,7 @@
         </span>
         <span id="w_119" class="ocr_word" title="bbox 626 1140 846 1183">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertium</ins>
-            <del title="nlp 0.90">Laertium</del>
+            <ins title="nlp 2.00">Laërtium</ins>
           </span>
         </span>
         <span id="w_120" class="ocr_word" title="bbox 890 1140 1159 1184">
@@ -806,9 +802,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_131" class="ocr_word" title="bbox 1005 1212 1247 1268" lang="grc">
+        <span id="w_131_0" class="ocr_word" title="bbox 1005 1212 1247 1268">
           <span class="alternatives">
-            <ins title="nlp 2.00">&lt;ἐκείνων&gt;</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_131_1" class="ocr_word" title="bbox 1005 1212 1247 1268">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἐκείνων&amp;#x003E;</ins>
           </span>
         </span>
         <span id="w_132" class="ocr_word" title="bbox 1279 1212 1359 1268" lang="grc">
@@ -824,11 +825,6 @@
         <span id="w_134" class="ocr_word" title="bbox 1718 1209 1776 1265" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μὴ</ins>
-          </span>
-        </span>
-        <span id="w_135" class="ocr_word" title="bbox 1815 1208 2049 1263" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διαφέρειν</ins>
           </span>
         </span>
       </span>
@@ -905,9 +901,14 @@
             <ins class="alt" title="nlp 1.00">εὐδαιμονίας]</ins>
           </span>
         </span>
-        <span id="w_151" class="ocr_word" title="bbox 1240 1354 1370 1410">
+        <span id="w_151_0" class="ocr_word" title="bbox 1240 1354 1370 1410">
           <span class="alternatives">
-            <ins title="nlp 2.00">&lt;καὶ&gt;</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_151_1" class="ocr_word" title="bbox 1240 1354 1370 1410">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;καὶ&amp;#x003E;</ins>
           </span>
         </span>
         <span id="w_152" class="ocr_word" title="bbox 1420 1370 1530 1397" lang="grc">
@@ -918,11 +919,6 @@
         <span id="w_153" class="ocr_word" title="bbox 1573 1353 1713 1409" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">μηδὲν</ins>
-          </span>
-        </span>
-        <span id="w_154" class="ocr_word" title="bbox 1756 1366 2050 1406" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αἱρετωτέραν</ins>
           </span>
         </span>
       </span>
@@ -1342,8 +1338,7 @@
         </span>
         <span id="w_228" class="ocr_word" title="bbox 1049 1932 1339 1972">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">secemantur.</ins>
-            <del title="nlp 0.90">secemantur.</del>
+            <ins title="nlp 2.00">secernantur.</ins>
           </span>
         </span>
         <span id="w_229" class="ocr_word" title="bbox 1389 1927 1581 1971">
@@ -1534,8 +1529,7 @@
         </span>
         <span id="w_259" class="ocr_word" title="bbox 1617 2142 1866 2197">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertiano,</ins>
-            <del title="nlp 0.90">Laertiano,</del>
+            <ins title="nlp 2.00">Laërtiano,</ins>
           </span>
         </span>
         <span id="w_260" class="ocr_word" title="bbox 1896 2154 1924 2182">
@@ -1616,8 +1610,7 @@
         </span>
         <span id="w_272" class="ocr_word" title="bbox 592 2287 821 2330">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertiana</ins>
-            <del title="nlp 0.90">Laertiana</del>
+            <ins title="nlp 2.00">Laërtiana</ins>
           </span>
         </span>
         <span id="w_273" class="ocr_word" title="bbox 841 2303 866 2329">
@@ -2119,19 +2112,18 @@
             <del title="nlp 0.90">videtur.</del>
           </span>
         </span>
-        <span id="w_357" class="ocr_word" title="bbox 1785 2855 1948 2899">
+        <span id="w_357_0" class="ocr_word" title="bbox 1785 2855 1948 2899">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Maiore</ins>
-            <del title="nlp 0.90">Maiore</del>
+            <ins class="alt" title="nlp 2.00">Maiore</ins>
+          </span>
+        </span>
+        <span id="w_357_1" class="ocr_word" title="bbox 1785 2855 1948 2899">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">igitur</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 302 2930 1418 2988">
-        <span id="w_359" class="ocr_word" title="bbox 302 2934 375 2975">
-          <span class="alternatives">
-            <ins title="nlp 2.00">igitur</ins>
-          </span>
-        </span>
         <span id="w_360" class="ocr_word" title="bbox 404 2931 478 2975">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">hic</ins>
@@ -2202,8 +2194,7 @@
         </span>
         <span id="w_371" class="ocr_word" title="bbox 952 3003 1127 3046">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertio</ins>
-            <del title="nlp 0.90">Laertio</del>
+            <ins title="nlp 2.00">Laërtio</ins>
           </span>
         </span>
         <span id="w_372" class="ocr_word" title="bbox 1160 3005 1203 3045">
@@ -2286,19 +2277,18 @@
             <del title="nlp 0.90">habeo</del>
           </span>
         </span>
-        <span id="w_385" class="ocr_word" title="bbox 1846 3085 1955 3127">
+        <span id="w_385_0" class="ocr_word" title="bbox 1846 3085 1955 3127">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quae</ins>
-            <del title="nlp 0.90">quae</del>
+            <ins class="alt" title="nlp 2.00">quae</ins>
+          </span>
+        </span>
+        <span id="w_385_1" class="ocr_word" title="bbox 1846 3085 1955 3127">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">addam</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 304 3145 1413 3204">
-        <span id="w_387" class="ocr_word" title="bbox 304 3146 403 3189">
-          <span class="alternatives">
-            <ins title="nlp 2.00">addam</ins>
-          </span>
-        </span>
         <span id="w_388" class="ocr_word" title="bbox 434 3148 497 3190">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">eis</ins>
