--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0055.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0055.html
@@ -85,9 +85,14 @@
             <ins class="alt" title="nlp 1.00">αὐτὸν</ins>
           </span>
         </span>
-        <span id="w_14" class="ocr_word" title="bbox 493 344 605 400" lang="grc">
+        <span id="w_14_0" class="ocr_word" title="bbox 493 344 605 400">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὑπὶρ</ins>
+            <ins class="alt" title="nlp 2.00">ὑπὲρ</ins>
+          </span>
+        </span>
+        <span id="w_14_1" class="ocr_word" title="bbox 493 344 605 400">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_15" class="ocr_word" title="bbox 631 346 749 400" lang="grc">
@@ -130,11 +135,6 @@
             <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_23" class="ocr_word" title="bbox 1869 358 2007 386" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῦτα</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 262 417 736 469">
         <span id="w_24" class="ocr_word" title="bbox 262 417 478 469" lang="grc">
@@ -159,9 +159,14 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_28" class="ocr_word" title="bbox 648 486 822 544" lang="grc">
+        <span id="w_28_0" class="ocr_word" title="bbox 648 486 822 544">
           <span class="alternatives">
-            <ins title="nlp 2.00">όρτίδια</ins>
+            <ins class="alt" title="nlp 2.00">ἀρτίδια</ins>
+          </span>
+        </span>
+        <span id="w_28_1" class="ocr_word" title="bbox 648 486 822 544">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_29" class="ocr_word" title="bbox 852 485 925 530" lang="grc">
@@ -192,11 +197,6 @@
         <span id="w_34" class="ocr_word" title="bbox 1633 486 1838 541" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">οἰναρίου</ins>
-          </span>
-        </span>
-        <span id="w_35" class="ocr_word" title="bbox 1874 486 2008 529" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔπινε.</ins>
           </span>
         </span>
       </span>
@@ -258,7 +258,7 @@
         </span>
         <span id="w_47" class="ocr_word" title="bbox 2025 574 2043 602">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">6</ins>
+            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -404,7 +404,7 @@
         </span>
         <span id="w_75" class="ocr_word" title="bbox 1713 773 1771 823" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὃς</ins>
+            <ins title="nlp 2.00">ὡς</ins>
           </span>
         </span>
         <span id="w_76" class="ocr_word" title="bbox 1795 771 2007 823" lang="grc">
@@ -468,7 +468,7 @@
         </span>
         <span id="w_87" class="ocr_word" title="bbox 549 918 637 974" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐμὰ</ins>
+            <ins title="nlp 2.00">ἅμα</ins>
           </span>
         </span>
         <span id="w_88" class="ocr_word" title="bbox 669 922 787 961" lang="grc">
@@ -553,14 +553,9 @@
             <ins title="nlp 2.00">ὡς</ins>
           </span>
         </span>
-        <span id="w_104" class="ocr_word" title="bbox 1571 986 1624 1031" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἐπ</ins>
-          </span>
-        </span>
         <span id="w_105" class="ocr_word" title="bbox 1636 986 1645 1003">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
+            <ins class="alt" title="nlp 2.00">ἐπ’</ins>
             <del title="nlp 0.90">’</del>
           </span>
         </span>
@@ -814,15 +809,14 @@
             <ins class="alt" title="nlp 1.00">στοᾷ</ins>
           </span>
         </span>
-        <span id="w_157" class="ocr_word" title="bbox 1170 1363 1249 1390" lang="grc">
+        <span id="w_157_0" class="ocr_word" title="bbox 1170 1363 1249 1390">
           <span class="alternatives">
-            <ins title="nlp 2.00">κὰτ</ins>
+            <ins class="alt" title="nlp 2.00">κατ᾿</ins>
           </span>
         </span>
-        <span id="w_158" class="ocr_word" title="bbox 1261 1345 1272 1363">
+        <span id="w_157_1" class="ocr_word" title="bbox 1170 1363 1249 1390">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_159" class="ocr_word" title="bbox 1290 1349 1428 1403" lang="grc">
@@ -838,11 +832,6 @@
         <span id="w_161" class="ocr_word" title="bbox 1548 1345 1729 1397" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ξύλινον</ins>
-          </span>
-        </span>
-        <span id="w_162" class="ocr_word" title="bbox 1772 1360 2006 1400" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">περιφερὲς</ins>
           </span>
         </span>
       </span>
@@ -1102,12 +1091,6 @@
             <ins title="nlp 2.00">οὐχέτ’</ins>
           </span>
         </span>
-        <span id="w_212" class="ocr_word" title="bbox 1102 1775 1112 1792">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
-          </span>
-        </span>
         <span id="w_213" class="ocr_word" title="bbox 1130 1791 1248 1819" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτῷ</ins>
@@ -1306,9 +1289,14 @@
             <ins class="alt" title="nlp 1.00">αὐτόν</ins>
           </span>
         </span>
-        <span id="w_252" class="ocr_word" title="bbox 746 2079 863 2119" lang="grc">
+        <span id="w_252_0" class="ocr_word" title="bbox 746 2079 863 2119">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἔφη,</ins>
+            <ins class="alt" title="nlp 2.00">„ὅτι,</ins>
+          </span>
+        </span>
+        <span id="w_252_1" class="ocr_word" title="bbox 746 2079 863 2119">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_253" class="ocr_word" title="bbox 894 2065 1000 2119" lang="grc">
@@ -1334,11 +1322,6 @@
         <span id="w_257" class="ocr_word" title="bbox 1601 2076 1718 2119" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτῷ</ins>
-          </span>
-        </span>
-        <span id="w_258" class="ocr_word" title="bbox 1757 2059 2006 2116" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διδομένων</ins>
           </span>
         </span>
       </span>
@@ -1380,9 +1363,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 371 2203 2006 2263">
-        <span id="w_267" class="ocr_word" title="bbox 371 2203 457 2251" lang="grc">
+        <span id="w_267_0" class="ocr_word" title="bbox 371 2203 457 2251">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἤν</ins>
+            <ins class="alt" title="nlp 2.00">Ἦν</ins>
+          </span>
+        </span>
+        <span id="w_267_1" class="ocr_word" title="bbox 371 2203 457 2251">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_268" class="ocr_word" title="bbox 489 2209 537 2251" lang="grc">
@@ -1418,11 +1406,6 @@
         <span id="w_274" class="ocr_word" title="bbox 1402 2204 1850 2260" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀκριβολογούμενος,</ins>
-          </span>
-        </span>
-        <span id="w_275" class="ocr_word" title="bbox 1895 2207 2006 2246" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅθεν</ins>
           </span>
         </span>
       </span>
@@ -1877,30 +1860,19 @@
             <del title="nlp 0.90">verba</del>
           </span>
         </span>
-        <span id="w_362" class="ocr_word" title="bbox 1641 2874 1693 2912">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
-          </span>
-        </span>
         <span id="w_363" class="ocr_word" title="bbox 1710 2876 1787 2922" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἵν’</ins>
           </span>
         </span>
-        <span id="w_364_0" class="ocr_word" title="bbox 1795 2897 1840 2902">
+        <span id="w_364_1_0" class="ocr_word" title="bbox 1795 2897 1840 2902">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">—</ins>
+            <ins class="alt" title="nlp 2.00">ἔχοι—δίς</ins>
           </span>
         </span>
-        <span id="w_364_1" class="ocr_word" title="bbox 1795 2897 1840 2902">
+        <span id="w_364_1_1" class="ocr_word" title="bbox 1795 2897 1840 2902">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">δίς</ins>
-          </span>
-        </span>
-        <span id="w_365" class="ocr_word" title="bbox 1931 2888 2005 2911" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">που</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1928,9 +1900,14 @@
             <del title="nlp 0.90">verba</del>
           </span>
         </span>
-        <span id="w_370" class="ocr_word" title="bbox 714 2931 966 2977" lang="grc">
+        <span id="w_370_0" class="ocr_word" title="bbox 714 2931 966 2977">
           <span class="alternatives">
-            <ins title="nlp 2.00">παιδισκρίῳ—σύν</ins>
+            <ins class="alt" title="nlp 2.00">παιδισκαρίῳ—σύν</ins>
+          </span>
+        </span>
+        <span id="w_370_1" class="ocr_word" title="bbox 714 2931 966 2977">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_371" class="ocr_word" title="bbox 1120 2944 1158 2968" lang="grc">
@@ -1965,12 +1942,6 @@
             <ins class="alt" title="nlp 1.00">εἰσήγαγεν</ins>
           </span>
         </span>
-        <span id="w_377" class="ocr_word" title="bbox 1846 2928 1884 2964">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">F.</ins>
-            <del title="nlp 0.90">F.</del>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 263 2981 2004 3035">
         <span id="w_378" class="ocr_word" title="bbox 263 2994 304 3025">
@@ -1989,9 +1960,14 @@
             <del title="nlp 0.90">B</del>
           </span>
         </span>
-        <span id="w_381" class="ocr_word" title="bbox 624 2989 657 3034" lang="grc">
+        <span id="w_381_0" class="ocr_word" title="bbox 624 2989 657 3034">
           <span class="alternatives">
-            <ins title="nlp 2.00">ξ</ins>
+            <ins class="alt" title="nlp 2.00">(ξ</ins>
+          </span>
+        </span>
+        <span id="w_381_1" class="ocr_word" title="bbox 624 2989 657 3034">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_382" class="ocr_word" title="bbox 683 2990 721 3023">
@@ -2029,8 +2005,7 @@
         </span>
         <span id="w_388" class="ocr_word" title="bbox 1195 2987 1208 3031">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">B</ins>
-            <del title="nlp 0.90">B</del>
+            <ins title="nlp 2.00">|| </ins>
           </span>
         </span>
         <span id="w_389" class="ocr_word" title="bbox 1259 2989 1302 3021">
@@ -2052,12 +2027,6 @@
         <span id="w_392" class="ocr_word" title="bbox 1601 2981 1718 3020" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐνίοτε</ins>
-          </span>
-        </span>
-        <span id="w_393" class="ocr_word" title="bbox 1745 2982 2004 3018">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Wachsmuth.</ins>
-            <del title="nlp 0.90">Wachsmuth.</del>
           </span>
         </span>
       </span>
@@ -2153,7 +2122,7 @@
         </span>
         <span id="w_410" class="ocr_word" title="bbox 882 3095 950 3141" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μὶν</ins>
+            <ins title="nlp 2.00">μὲν</ins>
           </span>
         </span>
         <span id="w_411" class="ocr_word" title="bbox 974 3094 1007 3131">
