--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0044.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0044.html
@@ -12,8 +12,7 @@
       <span class="ocr_line" title="bbox 318 198 1324 237">
         <span id="w_0" class="ocr_word" title="bbox 318 198 432 237">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">XLIV</ins>
-            <del title="nlp 0.90">XLIV</del>
+            <ins title="nlp 2.00">XLIV</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1055 200 1324 235">
@@ -32,7 +31,7 @@
         </span>
         <span id="w_3" class="ocr_word" title="bbox 1161 352 1316 399">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">€tio.</ins>
+            <ins title="nlp 2.00">Aëtio.</ins>
           </span>
         </span>
       </span>
@@ -57,14 +56,12 @@
         </span>
         <span id="w_7" class="ocr_word" title="bbox 834 448 948 492">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetii</ins>
-            <del title="nlp 0.90">Aetii</del>
+            <ins title="nlp 2.00">Aëtii</ins>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 981 448 1167 492">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">yicinam</ins>
-            <del title="nlp 0.90">yicinam</del>
+            <ins title="nlp 2.00">vicinam</ins>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1199 463 1371 505">
@@ -87,8 +84,7 @@
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1741 453 1931 508">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">yagatur.</ins>
-            <del title="nlp 0.90">yagatur.</del>
+            <ins title="nlp 2.00">vagatur.</ins>
           </span>
         </span>
         <span id="w_13" class="ocr_word" title="bbox 1981 450 2058 494">
@@ -160,8 +156,7 @@
         </span>
         <span id="w_25" class="ocr_word" title="bbox 1928 521 2055 565">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetio</ins>
-            <del title="nlp 0.90">Aetio</del>
+            <ins title="nlp 2.00">Aëtio</ins>
           </span>
         </span>
       </span>
@@ -459,8 +454,7 @@
         </span>
         <span id="w_74" class="ocr_word" title="bbox 858 946 1004 1002">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pauUo</ins>
-            <del title="nlp 0.90">pauUo</del>
+            <ins title="nlp 2.00">paullo</ins>
           </span>
         </span>
         <span id="w_75" class="ocr_word" title="bbox 1036 945 1149 988">
@@ -527,8 +521,7 @@
         </span>
         <span id="w_85" class="ocr_word" title="bbox 1133 1017 1294 1060">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertii</ins>
-            <del title="nlp 0.90">Laertii</del>
+            <ins title="nlp 2.00">Laërtii</ins>
           </span>
         </span>
         <span id="w_86" class="ocr_word" title="bbox 1324 1017 1591 1061">
@@ -982,25 +975,18 @@
             <del title="nlp 0.90">ad</del>
           </span>
         </span>
-        <span id="w_162" class="ocr_word" title="bbox 1667 1587 1907 1644">
+        <span id="w_162_0" class="ocr_word" title="bbox 1667 1587 1907 1644">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">generalem</ins>
-            <del title="nlp 0.90">generalem</del>
+            <ins class="alt" title="nlp 2.00">generalem</ins>
           </span>
         </span>
-        <span id="w_163" class="ocr_word" title="bbox 1941 1585 2052 1629">
+        <span id="w_162_1" class="ocr_word" title="bbox 1667 1587 1907 1644">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Stoi-</ins>
+            <ins class="alt" title="nlp 2.00">Stoicorum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 306 1656 2049 1715">
-        <span id="w_164" class="ocr_word" title="bbox 306 1672 453 1699">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">corum</ins>
-            <del title="nlp 0.90">Stoicorum</del>
-          </span>
-        </span>
         <span id="w_165" class="ocr_word" title="bbox 485 1656 723 1699">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">doctrinam</ins>
@@ -1345,8 +1331,7 @@
         </span>
         <span id="w_220" class="ocr_word" title="bbox 1917 2083 2046 2126">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetio</ins>
-            <del title="nlp 0.90">Aetio</del>
+            <ins title="nlp 2.00">Aëtio</ins>
           </span>
         </span>
       </span>
@@ -2104,19 +2089,18 @@
             <del title="nlp 0.90">(eclogarum</del>
           </span>
         </span>
-        <span id="w_348" class="ocr_word" title="bbox 1797 3082 1910 3125">
+        <span id="w_348_0" class="ocr_word" title="bbox 1797 3082 1910 3125">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">enim</ins>
-            <del title="nlp 0.90">enim</del>
+            <ins class="alt" title="nlp 2.00">enim</ins>
+          </span>
+        </span>
+        <span id="w_348_1" class="ocr_word" title="bbox 1797 3082 1910 3125">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">thesauro</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 296 3152 2033 3214">
-        <span id="w_350" class="ocr_word" title="bbox 296 3166 422 3196">
-          <span class="alternatives">
-            <ins title="nlp 2.00">thesauro</ins>
-          </span>
-        </span>
         <span id="w_351" class="ocr_word" title="bbox 453 3167 558 3196">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">usus</ins>
