--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0045.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0045.html
@@ -38,8 +38,7 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 457 295 644 349">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">suctore,</ins>
-            <del title="nlp 0.90">suctore,</del>
+            <ins title="nlp 2.00">auctore,</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 679 291 769 336">
@@ -62,8 +61,7 @@
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1090 291 1336 350">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ghrjsippo</ins>
-            <del title="nlp 0.90">Ghrjsippo</del>
+            <ins title="nlp 2.00">Chrysippo</ins>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1363 292 1452 336">
@@ -487,8 +485,7 @@
       <span class="ocr_line" title="bbox 264 864 2021 921">
         <span id="w_81" class="ocr_word" title="bbox 264 864 484 908">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laertium</ins>
-            <del title="nlp 0.90">Laertium</del>
+            <ins title="nlp 2.00">Laërtium</ins>
           </span>
         </span>
         <span id="w_82" class="ocr_word" title="bbox 529 865 580 907">
@@ -537,8 +534,7 @@
       <span class="ocr_line" title="bbox 263 934 2021 993">
         <span id="w_89" class="ocr_word" title="bbox 263 935 393 979">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetio</ins>
-            <del title="nlp 0.90">Aetio</del>
+            <ins title="nlp 2.00">Aëtio</ins>
           </span>
         </span>
         <span id="w_90" class="ocr_word" title="bbox 437 939 636 979">
@@ -611,8 +607,7 @@
         </span>
         <span id="w_101" class="ocr_word" title="bbox 753 1008 937 1050">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetiana</ins>
-            <del title="nlp 0.90">Aetiana</del>
+            <ins title="nlp 2.00">Aëtiana</ins>
           </span>
         </span>
         <span id="w_102" class="ocr_word" title="bbox 976 1009 1122 1051">
@@ -694,19 +689,18 @@
             <del title="nlp 0.90">suppetebant,</del>
           </span>
         </span>
-        <span id="w_116" class="ocr_word" title="bbox 1757 1095 1866 1136">
+        <span id="w_116_0" class="ocr_word" title="bbox 1757 1095 1866 1136">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quae</ins>
-            <del title="nlp 0.90">quae</del>
+            <ins class="alt" title="nlp 2.00">quae</ins>
+          </span>
+        </span>
+        <span id="w_116_1" class="ocr_word" title="bbox 1757 1095 1866 1136">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Chrysippeam</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 265 1151 1012 1209">
-        <span id="w_118" class="ocr_word" title="bbox 265 1152 457 1208">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Chrysippeam</ins>
-          </span>
-        </span>
         <span id="w_119" class="ocr_word" title="bbox 490 1153 702 1209">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">originem</ins>
@@ -864,8 +858,7 @@
         </span>
         <span id="w_145" class="ocr_word" title="bbox 719 1512 969 1554">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">memoriara</ins>
-            <del title="nlp 0.90">memoriara</del>
+            <ins title="nlp 2.00">memoriam</ins>
           </span>
         </span>
         <span id="w_146" class="ocr_word" title="bbox 1008 1515 1376 1569">
@@ -944,8 +937,7 @@
         </span>
         <span id="w_158" class="ocr_word" title="bbox 1434 1598 1560 1626">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">suura</ins>
-            <del title="nlp 0.90">suura</del>
+            <ins title="nlp 2.00">suum</ins>
           </span>
         </span>
         <span id="w_159" class="ocr_word" title="bbox 1592 1598 1718 1626">
@@ -988,20 +980,17 @@
         </span>
         <span id="w_165" class="ocr_word" title="bbox 991 1654 1175 1697">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">alterura</ins>
-            <del title="nlp 0.90">alterura</del>
+            <ins title="nlp 2.00">alterum</ins>
           </span>
         </span>
         <span id="w_166" class="ocr_word" title="bbox 1220 1656 1482 1711">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scriptorura</ins>
-            <del title="nlp 0.90">scriptorura</del>
+            <ins title="nlp 2.00">scriptorum</ins>
           </span>
         </span>
         <span id="w_167" class="ocr_word" title="bbox 1515 1654 1859 1698">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Christianorura</ins>
-            <del title="nlp 0.90">Christianorura</del>
+            <ins title="nlp 2.00">Christianorum</ins>
           </span>
         </span>
         <span id="w_168" class="ocr_word" title="bbox 1901 1656 2018 1697">
@@ -1014,8 +1003,7 @@
       <span class="ocr_line" title="bbox 264 1726 2020 1783">
         <span id="w_169" class="ocr_word" title="bbox 264 1726 448 1768">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">raaxirae</ins>
-            <del title="nlp 0.90">raaxirae</del>
+            <ins title="nlp 2.00">maxime</ins>
           </span>
         </span>
         <span id="w_170" class="ocr_word" title="bbox 479 1727 523 1768">
@@ -1044,8 +1032,7 @@
         </span>
         <span id="w_174" class="ocr_word" title="bbox 1150 1726 1579 1783">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Neoplatonicorura,</ins>
-            <del title="nlp 0.90">Neoplatonicorura,</del>
+            <ins title="nlp 2.00">Neoplatonicorum,</ins>
           </span>
         </span>
         <span id="w_175" class="ocr_word" title="bbox 1611 1741 1636 1768">
@@ -1208,19 +1195,18 @@
             <del title="nlp 0.90">editionum</del>
           </span>
         </span>
-        <span id="w_203" class="ocr_word" title="bbox 1539 1941 1890 1999">
+        <span id="w_203_0" class="ocr_word" title="bbox 1539 1941 1890 1999">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">suppeditabant,</ins>
-            <del title="nlp 0.90">suppeditabant,</del>
+            <ins class="alt" title="nlp 2.00">suppeditabant,</ins>
+          </span>
+        </span>
+        <span id="w_203_1" class="ocr_word" title="bbox 1539 1941 1890 1999">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">congerere</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 262 2011 722 2068">
-        <span id="w_205" class="ocr_word" title="bbox 262 2025 409 2068">
-          <span class="alternatives">
-            <ins title="nlp 2.00">congerere</ins>
-          </span>
-        </span>
         <span id="w_206" class="ocr_word" title="bbox 441 2012 548 2054">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">satis</ins>
@@ -1287,8 +1273,7 @@
       <span class="ocr_line" title="bbox 262 2152 2019 2214">
         <span id="w_216" class="ocr_word" title="bbox 262 2152 557 2212">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Simpliciura,</ins>
-            <del title="nlp 0.90">Simpliciura,</del>
+            <ins title="nlp 2.00">Simplicium,</ins>
           </span>
         </span>
         <span id="w_217" class="ocr_word" title="bbox 601 2156 722 2197">
@@ -1417,8 +1402,7 @@
         </span>
         <span id="w_237" class="ocr_word" title="bbox 1368 2300 1782 2343">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coraraentatoribus</ins>
-            <del title="nlp 0.90">coraraentatoribus</del>
+            <ins title="nlp 2.00">commentatoribus</ins>
           </span>
         </span>
         <span id="w_238" class="ocr_word" title="bbox 1812 2301 2017 2357">
@@ -1449,8 +1433,7 @@
         </span>
         <span id="w_242" class="ocr_word" title="bbox 927 2373 1054 2429">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">enira,</ins>
-            <del title="nlp 0.90">enira,</del>
+            <ins title="nlp 2.00">enim,</ins>
           </span>
         </span>
         <span id="w_243" class="ocr_word" title="bbox 1086 2387 1170 2428">
@@ -1479,8 +1462,7 @@
         </span>
         <span id="w_247" class="ocr_word" title="bbox 1612 2372 1758 2415">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nuUos</ins>
-            <del title="nlp 0.90">nuUos</del>
+            <ins title="nlp 2.00">nullos</ins>
           </span>
         </span>
         <span id="w_248" class="ocr_word" title="bbox 1789 2373 1878 2415">
@@ -1664,9 +1646,14 @@
             <ins class="alt" title="nlp 1.00">ὅτι</ins>
           </span>
         </span>
-        <span id="w_279" class="ocr_word" title="bbox 748 2660 793 2702" lang="grc">
+        <span id="w_279_0" class="ocr_word" title="bbox 748 2660 793 2702">
           <span class="alternatives">
-            <ins title="nlp 2.00">αἰ</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_279_1" class="ocr_word" title="bbox 748 2660 793 2702">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">αἱ</ins>
           </span>
         </span>
         <span id="w_280" class="ocr_word" title="bbox 825 2658 973 2715" lang="grc">
@@ -1693,12 +1680,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">qui</ins>
             <del title="nlp 0.90">qui</del>
-          </span>
-        </span>
-        <span id="w_285" class="ocr_word" title="bbox 1925 2662 2015 2701">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tam</ins>
-            <del title="nlp 0.90">tam</del>
           </span>
         </span>
       </span>
@@ -1918,9 +1899,14 @@
             <ins title="nlp 2.00">„de</ins>
           </span>
         </span>
-        <span id="w_321" class="ocr_word" title="bbox 1203 2947 1369 2989">
+        <span id="w_321_0" class="ocr_word" title="bbox 1203 2947 1369 2989">
           <span class="alternatives">
-            <ins title="nlp 2.00">anima''</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_321_1" class="ocr_word" title="bbox 1203 2947 1369 2989">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">anima“</ins>
           </span>
         </span>
         <span id="w_322" class="ocr_word" title="bbox 1414 2947 1524 2989">
@@ -1935,12 +1921,6 @@
             <del title="nlp 0.90">doctiora</del>
           </span>
         </span>
-        <span id="w_324" class="ocr_word" title="bbox 1805 2946 2013 3003">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quaedam</ins>
-            <del title="nlp 0.90">quaedam</del>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 262 3016 2014 3075">
         <span id="w_325" class="ocr_word" title="bbox 262 3031 338 3072">
@@ -1951,8 +1931,7 @@
         </span>
         <span id="w_326" class="ocr_word" title="bbox 369 3016 580 3060">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Sorauum</ins>
-            <del title="nlp 0.90">Sorauum</del>
+            <ins title="nlp 2.00">Soranum</ins>
           </span>
         </span>
         <span id="w_327" class="ocr_word" title="bbox 625 3020 800 3073">
@@ -2054,16 +2033,11 @@
         </span>
         <span id="w_343" class="ocr_word" title="bbox 1935 3090 2016 3132">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fre-</ins>
+            <ins title="nlp 2.00">frequenti</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 263 3159 2015 3217">
-        <span id="w_344" class="ocr_word" title="bbox 263 3162 411 3215">
-          <span class="alternatives">
-            <ins title="nlp 2.00">frequenti</ins>
-          </span>
-        </span>
         <span id="w_345" class="ocr_word" title="bbox 461 3159 707 3204">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Stoicorum</ins>
@@ -2102,8 +2076,7 @@
         </span>
         <span id="w_351" class="ocr_word" title="bbox 1725 3163 1928 3204">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nirairura</ins>
-            <del title="nlp 0.90">nirairura</del>
+            <ins title="nlp 2.00">nimirum</ins>
           </span>
         </span>
         <span id="w_352" class="ocr_word" title="bbox 1972 3165 2015 3204">
